--- a/base-admin/src/main/resources/application.properties
+++ b/base-admin/src/main/resources/application.properties
@@ -7,7 +7,7 @@ server.contextPath=/base-admin/
 
 #datasource
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/base-admin?characterEncoding=utf-8
+spring.datasource.url=jdbc:mysql://localhost:3306/base-admin?characterEncoding=utf-8&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root
 
